--- a/uno.html
+++ b/uno.html
@@ -7,14 +7,14 @@
     <meta charset="utf-8" />
     <title>Alben</title>
 
-    <a href="index.html"><img src="bilder/uno.tif" width="25" height="25"></a>
+    <a href="index.html"><img src="bilder/startseite.tif" width="25" height="25"></a>
     <h1>Uno!</h1>
     <h2>2012</h2>
    
 </head>
 <body>
     <div class="songliste">
-        <img src="bilder/American_Idiot.png" width="350" height="350">
+        <img src="bilder/uno.tif" width="350" height="350">
     <table class="titel">
     <tr>
         <th><div class="titel"><p>Titel</p></div></th>
